creacion de turnos

--- a/CARW/templates/layout.html
+++ b/CARW/templates/layout.html
@@ -25,7 +25,7 @@
                 </ul>
             </li>
             <li>
-                <a href="#">Turnos</a>
+                <a onclick="goturnos()" style="color:#FFFFFF">Turnos</a>
                 <ul class="menu-vertical">
                 </ul>
             </li>
