--- a/CARW/templates/main/Pagos.html
+++ b/CARW/templates/main/Pagos.html
@@ -11,6 +11,12 @@
 <div id="alerta4" class="alerta-exito oculto">
     Pago Realizado!
 </div>
+<div id="alerta5" class="alerta-exito oculto">
+    Pago No registrado o Fallido!
+</div>
+<div id="alerta6" class="alerta-exito oculto">
+    Tuno Generado Con Exito!
+</div>
 <div id="pagofisico" class="contenedordepagos oculto">
     <h1 style="text-align: center;">Realize su pago</h1>
     <br>
@@ -67,6 +73,7 @@
     <h1 style="text-align: center;">Descripción Del Paquete</h1>
     <br>
     <div id="miContainer" class="container5">
+        <p id="GID" class="card-text"></p>
         <p id="cambio" class="card-text"></p>
     </div>
     <br><br>
