--- a/CARW/templates/layout.html
+++ b/CARW/templates/layout.html
@@ -15,7 +15,7 @@
     <div id="sidebar-container">
         <div id="sidebar">
             <div class="toggle-btn">
-                <span>&#9776;</span>
+                <span onclick="mostrar()">&#9776;</span>
             </div>
             <ul>
                 <li>
