--- a/CARW/templates/main/Turnos.html
+++ b/CARW/templates/main/Turnos.html
@@ -13,7 +13,7 @@
             </tr>
         </thead>
         <tbody>
-            <tr>
+            <tr id="reemplazame">
                 <td>Fila 1, Columna 1</td>
                 <td>Fila 1, Columna 2</td>
                 <td>Fila 1, Columna 3</td>
@@ -25,4 +25,5 @@
         </tbody>
     </table>
 </div>
+<script src="{{url_for('static', filename='js/Turnos.js')}}"></script>
 {% endblock %}
