--- a/CARW/templates/layout.html
+++ b/CARW/templates/layout.html
@@ -8,6 +8,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="{{url_for('static', filename='css/master.css')}}">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/boostrap_css/bootstrap.min.css') }}">
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 </head>
 
 <body>
@@ -31,10 +33,10 @@
                     <a onclick="goturnos()" style="color:#FFFFFF">Turnos</a>
                 </li>
                 <li>
-                    <a href="#">Balances</a>
+                    <a onclick="gobalances()" style="color:#FFFFFF" gobalances()>Balances</a>
                 </li>
                 <li>
-                    <a href="#">Ajustes</a>
+                    <a onclick="goajustes()" style="color:#FFFFFF">Ajustes</a>
                 </li>
             </ul>
         </div>
@@ -44,8 +46,6 @@
 <script src="{{url_for('static', filename='js/principal.js')}} "></script>
 <script src="{{ url_for('static', filename='js/boostrap_js/bootstrap.min.js') }}"></script>
 <script src="{{ url_for('static', filename='js/boostrap_js/bootstrap.bundle.min.js') }}"></script>
-
-<script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 </body>
 
 </html>
