--- a/CARW/templates/main/Balances.html
+++ b/CARW/templates/main/Balances.html
@@ -2,6 +2,9 @@
 <div id="alerta" class="alerta-exito oculto">
     No hay nada que imprimir!
 </div>
+<div id="alerta2" class="alerta-exito oculto">
+    Por favor, ingrese ambas fechas para comparar!
+</div>
 <div id="barra-botones2">
     <label class="sombreado" for="buscafecha">Coloque La Fecha</label>
     <br><br>
