--- a/CARW/templates/main/login.html
+++ b/CARW/templates/main/login.html
@@ -14,7 +14,7 @@
         <img class="avatar" src="{{url_for('static', filename='img/logo.jpg')}}" alt="logo CW">
         <h1>Ingrese aquí</h1>
         <form>
-            <label for="nombre-usuario">Nombre De Usuario</label>
+            <label for="nombre">Nombre De Usuario</label>
             <input id="nombre" type="text" placeholder="coloque su usuario">
 
             <label for="contraseña">Contraseña</label>
