turnos no se deja dominar

--- a/CARW/templates/main/Balances.html
+++ b/CARW/templates/main/Balances.html
@@ -18,9 +18,9 @@
 <div id="barra-botones3">
     <label class="sombreado" for="buscafecha">Coloque Las Fecha a Comparar</label>
     <br><br>
-    <input id="buscafechac1" type="text" placeholder="Dia/Mes/Año">
+    <input id="buscafechac1" type="text" placeholder="Mes/Año">
     <br><br>
-    <input id="buscafechac2" type="text" placeholder="Dia/Mes/Año">
+    <input id="buscafechac2" type="text" placeholder="Mes/Año">
     <br><br>
     <button class="btn btn-warning" type="submit" onclick="comparar_ventas()">Comparar</button>
 </div>
