--- a/CARW/templates/main/Turnos.html
+++ b/CARW/templates/main/Turnos.html
@@ -6,9 +6,9 @@
     <p class="sombreado" style="text-align: center;">Turnos en proceso</p>
 </div>
 <div class="sombreado" id="barra-botones">
-    <button class="btn btn-info" type="submit" onclick="calcularpago()">Actualizar</button>
+    <button class="btn btn-info" type="submit" onclick="actualizar()">Actualizar</button>
     <br><br>
-    <button class="btn btn-info" type="submit" onclick="calcularpago()">Limpiar</button>
+    <button class="btn btn-info" type="submit" onclick="verificarHoraFin()">Limpiar</button>
     <br><br>
 </div>
 <div id="miTabla">
@@ -41,7 +41,6 @@
                 <th>Duracion</th>
                 <th>Hora Fin</th>
                 <th>Estado</th>
-                <th>Botones</th>
             </tr>
         </thead>
         <tbody id="tablaBody2">
