--- a/CARW/templates/main/Turnos.html
+++ b/CARW/templates/main/Turnos.html
@@ -6,9 +6,7 @@
     <p class="sombreado" style="text-align: center;">Turnos en proceso</p>
 </div>
 <div class="sombreado" id="barra-botones">
-    <button class="btn btn-info" type="submit" onclick="actualizar()">Actualizar</button>
-    <br><br>
-    <button class="btn btn-info" type="submit" onclick="verificarHoraFin()">Limpiar</button>
+    <button class="btn btn-info" type="submit" onclick="borrarclones()">Limpiar</button>
     <br><br>
 </div>
 <div id="miTabla">
